# repmetric

./: AGENTS.md  Apptainer.def  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
notebooks/: performance_comparison.ipynb
src/: sliding_window_analysis.py
src/repmetric/: __init__.py  analysis.py  api.py  backend.py  bicped.cpp  cped.cpp  geodesic.py  levd.cpp  plotting.py
src/repmetric/util/: __init__.py
tests/: test_analysis.py  test_geodesic.py  test_repmetric.py
