[project]
name = "repmetric"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomoki Uda"}
]
license = {file= "LICENSE"}
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numba (==0.62.0rc2)",
    "joblib (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)"
]


[build-system]
requires = ["setuptools>=61.0", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
packages = [{include = "repmetric", from = "src"}]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "repmetric"
ignore_missing_imports = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
mypy = "^1.0.0"
papermill = "^2.6.0"
ipykernel = "^6.30.1"
tqdm = "^4.67.1"
plotly = "^6.3.0"
pot = "^0.9.5"
networkx = "^3.5"
pandas = "^2.3.2"
setuptools = "^70.3.0"
