[project]
name = "repmetric"
version = "0.1.0"
description = "A Python library for fast edit distance calculation, powered by C++."
authors = [
    {name = "Tomoki Uda"}
]
license = {file= "LICENSE"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
keywords = ["edit distance", "levenshtein distance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
analysis = [
    "scipy",
    "scikit-learn>=1.7.2,<2.0.0",
    "pot>=0.9.5,<0.10.0",
    "joblib",
]
plotting = [
    "matplotlib>=3.10.6,<4.0.0",
    "plotly>=6.3.0,<7.0.0",
    "networkx>=3.5,<4.0.0; python_version >= \"3.11\"",
]

[project.urls]
Homepage = "https://github.com/t-uda/repmetric"
Repository = "https://github.com/t-uda/repmetric"


[build-system]
requires = ["setuptools>=61.0", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
packages = [{include = "repmetric", from = "src"}]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "repmetric"
ignore_missing_imports = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
mypy = "^1.0.0"
papermill = "^2.6.0"
setuptools = "^70.3.0"

[tool.poetry.group.notebook.dependencies]
matplotlib = ">=3.10.6,<4.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
umap-learn = ">=0.5.9.post2,<0.6.0"
japanize-matplotlib = "^1.1.3"
ipykernel = "^6.30.1"
tqdm = "^4.67.1"
plotly = "^6.3.0"
pot = "^0.9.5"
networkx = {version = "^3.5", python = ">=3.11"}
pandas = "^2.3.2"
